# paperbench-mod

./: .gitignore  README.md  pyproject.toml
common/alcatraz/: pyproject.toml
common/alcatraz/alcatraz/clusters/: local.py
common/preparedness_turn_completer/: pyproject.toml
lemma_agent_core/: IMPLEMENTATION_NOTES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STATUS.md  TOOLKIT_INTEGRATION.md  __init__.py  config.yaml.example  requirements.txt  runner.py  test_agent.py  test_agent_with_llm.py  test_tools.py  toolkit_requirements.txt
lemma_agent_core/agent/: __init__.py  base_agent.py  lead_agent.py
lemma_agent_core/config/: __init__.py  agents_config.py  compression_config.py  llm_config.py  manager.py  phase_config.py  token_count_config.py
lemma_agent_core/llm/: __init__.py  anthropic_client.py  bedrock_client.py  client_factory.py  llm_utils.py  openrouter_client.py  token_counter.py
lemma_agent_core/memory/: __init__.py  memory_manger.py
lemma_agent_core/message/: __init__.py  message.py  message_store.py
lemma_agent_core/monitor/: __init__.py  logger.py
lemma_agent_core/prompts/: __init__.py  compact_message_bridge.md  sys_code_agent.md  sys_compact.md  sys_git_status.md  sys_identity.md  sys_lead_agent.md  sys_phase_compact.md  sys_phase_switch_judgement.md  sys_skills.md  user_compact.md  user_phase_compact.md  user_phase_switch_judgement_no_historic_phases.md  user_phase_switch_judgement_with_historic_phases.md  user_sys_reminder_analysis.md  user_sys_reminder_compact.md  user_sys_reminder_data_processing.md  user_sys_reminder_env_setup.md  user_sys_reminder_evaluation.md  user_sys_reminder_general.md  user_sys_reminder_input_code_agent.md  user_sys_reminder_phase_summary.md  user_sys_reminder_plan.md  (+15 more)
paperbench/: .gitignore  README.md  pyproject.toml  pytest.ini
(+159 files in other folders)
