[project]
name = 'alcatraz'
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"
dependencies = [
    "pyyaml",
    "jupyter_client",
    "rich[jupyter]",
    "docker",
    "tenacity",
    "filelock",
    "ipykernel",
    "pydantic",
    "pytest",
    "pytest-asyncio",
    "blobfile",
    "httpx",
    "pillow",
    "msgpack",
    "fastapi",
    "azure-mgmt-compute",
    "azure-mgmt-network",
    "azure-identity",
    "vncdotool",
    "asyncvnc",
    "structlog",
    "async-lru",
    "openai",
]

[tool.setuptools]
packages = { find = { include = ["alcatraz", "alcatraz.*"] } }

[build-system]
requires = ["setuptools<78.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
typeCheckingMode = "off" # we use mypy

[dependency-groups]
dev = [
  "mypy==1.18.2",
  "poethepoet>=0.36.0",
  "pre-commit>=4.2.0",
  "ruff>=0.12.1",
  "pylint>=3.2.7",
  "types-docker==7.1.0.20251009",
  "flask",
  "chz",
]

[tool.mypy]
strict = true
local_partial_types = true
# These two make life easier if you use a lot of untyped libraries:
warn_return_any = false
allow_untyped_calls = true
# Do not use `ignore_missing_imports`, instead use:
disable_error_code = ["import-untyped"]
# If you don't want to force use of type annotations:
# allow_incomplete_defs = true
# allow_untyped_defs = true
# allow_any_generics = true

[[tool.mypy.overrides]]
module = ["aioconsole", "aioconsole.*", "chz", "chz.*", "flask"]
ignore_missing_imports = true

[tool.pylint]
disable = ["all"]
# will eventually be supported by ruff: github.com/astral-sh/ruff/issues/2914
enable = ["cyclic-import"]

[tool.poe.tasks]
lint = "ruff check --fix"
typecheck = "mypy ."
lint-extra = "pylint alcatraz"
